Задает разметку страницы "Портфолио"

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<header class="header">
+		<header class="header-portfolio">
 			<div class="container header-container">
 				<nav class="site-nav">
 					<a class="logo header-logo" href="./index.html">
