--- a/portfolio.html
+++ b/portfolio.html
@@ -78,112 +78,139 @@
 					</ul>
 					<ul class="list portfolio-card-conteiner">
 						<li class="portfolio-card">
-							<img src="./images/portfolio/techno-logo.jpg" width="370" height="294" alt="ноутбук" />
-							<div class="project-name-container">
-								<h2 class="project-title">Технокряк</h2>
-								<p class="project-subtitle">Веб-сайт</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/techno-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Технокряк</h2>
+									<p class="project-subtitle">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/new-orlean-logo.jpg" width="370" height="294" alt="два баскетболиста" />
-							<div class="project-name-container">
-								<h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-								<p class="project-subtitle">Дизайн</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/new-orlean-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+									<p class="project-subtitle">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/seafood-logo.jpg" width="370" height="294" alt="логотип ресторана" />
-							<div class="project-name-container">
-								<h2 class="project-title">Ресторан Seafood</h2>
-								<p class="project-subtitle">Приложение</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/seafood-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Ресторан Seafood</h2>
+									<p class="project-subtitle">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/prime-logo.jpg" width="370" height="294" alt="наушники" />
-							<div class="project-name-container">
-								<h2 class="project-title">Проект Prime</h2>
-								<p class="project-subtitle">Маркетинг</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/prime-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Проект Prime</h2>
+									<p class="project-subtitle">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/boxes-logo.jpg" width="370" height="294" alt="две коробки" />
-							<div class="project-name-container">
-								<h2 class="project-title">Проект Boxes</h2>
-								<p class="project-subtitle">Приложение</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/boxes-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Проект Boxes</h2>
+									<p class="project-subtitle">Приложение</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/inspiration-logo.jpg" width="370" height="294" alt="компьютер" />
-							<div class="project-name-container">
-								<h2 class="project-title">Inspiration has no Borders</h2>
-								<p class="project-subtitle">Веб-сайт</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/inspiration-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Inspiration has no Borders</h2>
+									<p class="project-subtitle">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/limited-logo.jpg" width="370" height="294" alt="книга" />
-							<div class="project-name-container">
-								<h2 class="project-title">Издание Limited Edition</h2>
-								<p class="project-subtitle">Дизайн</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/limited-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Издание Limited Edition</h2>
+									<p class="project-subtitle">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/lab-logo.jpg" width="370" height="294" alt="ярлык" />
-							<div class="project-name-container">
-								<h2 class="project-title">Проект LAB</h2>
-								<p class="project-subtitle">Маркетинг</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/lab-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Проект LAB</h2>
+									<p class="project-subtitle">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="portfolio-card">
-							<img src="./images/portfolio/growing-logo.jpg" width="370" height="294" alt="ноутбук" />
-							<div class="project-name-container">
-								<h2 class="project-title">Growing Business</h2>
-								<p class="project-subtitle">Приложение</p>
-								<!-- <p class="project-desc">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p> -->
-							</div>
+							<a href="#">
+								<div class="project-img-container">
+									<img src="./images/portfolio/growing-logo.jpg" width="370" height="294" alt="ноутбук" />
+									<p class="project-desc">
+										Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+										для цифрового шпионажа и атак на защищённые сервера конкурентов.
+									</p>
+								</div>
+								<div class="project-name-container">
+									<h2 class="project-title">Growing Business</h2>
+									<p class="project-subtitle">Приложение</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
