--- a/index.html
+++ b/index.html
@@ -130,28 +130,38 @@
 								<p class="team-card-profession">Product Designer</p>
 								<ul class="list team-links-list">
 									<li>
-										<a class="links-list-item" href="http://instagram.com" aria-label="ссылка на Instagram">
+										<a
+											class="links-list-item"
+											href="http://instagram.com"
+											target="blank"
+											aria-label="ссылка на Instagram"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#instagram-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://twitter.com" aria-label="ссылка на Twitter">
+										<a class="links-list-item" href="http://twitter.com" target="blank" aria-label="ссылка на Twitter">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#twitter-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://fb.com" aria-label="ссылка на Facebook">
+										<a class="links-list-item" href="http://fb.com" target="blank" aria-label="ссылка на Facebook">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#facebook-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://linkedin.com" aria-label="ссылка на Linkedin">
+										<a
+											class="links-list-item"
+											href="http://linkedin.com"
+											target="blank"
+											aria-label="ссылка на Linkedin"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#linkedin-icon"></use>
 											</svg>
@@ -167,28 +177,38 @@
 								<p class="team-card-profession">Frontend Developer</p>
 								<ul class="list team-links-list">
 									<li>
-										<a class="links-list-item" href="http://instagram.com" aria-label="ссылка на Instagram">
+										<a
+											class="links-list-item"
+											href="http://instagram.com"
+											target="blank"
+											aria-label="ссылка на Instagram"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#instagram-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://twitter.com" aria-label="ссылка на Twitter">
+										<a class="links-list-item" href="http://twitter.com" target="blank" aria-label="ссылка на Twitter">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#twitter-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://fb.com" aria-label="ссылка на Facebook">
+										<a class="links-list-item" href="http://fb.com" target="blank" aria-label="ссылка на Facebook">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#facebook-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://linkedin.com" aria-label="ссылка на Linkedin">
+										<a
+											class="links-list-item"
+											href="http://linkedin.com"
+											target="blank"
+											aria-label="ссылка на Linkedin"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#linkedin-icon"></use>
 											</svg>
@@ -204,28 +224,38 @@
 								<p class="team-card-profession">Marketing</p>
 								<ul class="list team-links-list">
 									<li>
-										<a class="links-list-item" href="http://instagram.com" aria-label="ссылка на Instagram">
+										<a
+											class="links-list-item"
+											href="http://instagram.com"
+											target="blank"
+											aria-label="ссылка на Instagram"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#instagram-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://twitter.com" aria-label="ссылка на Twitter">
+										<a class="links-list-item" href="http://twitter.com" target="blank" aria-label="ссылка на Twitter">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#twitter-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://fb.com" aria-label="ссылка на Facebook">
+										<a class="links-list-item" href="http://fb.com" target="blank" aria-label="ссылка на Facebook">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#facebook-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://linkedin.com" aria-label="ссылка на Linkedin">
+										<a
+											class="links-list-item"
+											href="http://linkedin.com"
+											target="blank"
+											aria-label="ссылка на Linkedin"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#linkedin-icon"></use>
 											</svg>
@@ -241,28 +271,38 @@
 								<p class="team-card-profession">UI Designer</p>
 								<ul class="list team-links-list">
 									<li>
-										<a class="links-list-item" href="http://instagram.com" aria-label="ссылка на Instagram">
+										<a
+											class="links-list-item"
+											href="http://instagram.com"
+											target="blank"
+											aria-label="ссылка на Instagram"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#instagram-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://twitter.com" aria-label="ссылка на Twitter">
+										<a class="links-list-item" href="http://twitter.com" target="blank" aria-label="ссылка на Twitter">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#twitter-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://fb.com" aria-label="ссылка на Facebook">
+										<a class="links-list-item" href="http://fb.com" target="blank" aria-label="ссылка на Facebook">
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#facebook-icon"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="links-list-item" href="http://linkedin.com" aria-label="ссылка на Linkedin">
+										<a
+											class="links-list-item"
+											href="http://linkedin.com"
+											target="blank"
+											aria-label="ссылка на Linkedin"
+										>
 											<svg class="socials-logo-icon" width="20" height="20">
 												<use href="./images/symbol-defs.svg#linkedin-icon"></use>
 											</svg>
@@ -349,28 +389,28 @@
 					<b class="join-in">присоединяйтесь</b>
 					<ul class="list footer-links-list">
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://instagram.com" aria-label="ссылка на Instagram">
+							<a class="footer-links" href="http://instagram.com" target="blank" aria-label="ссылка на Instagram">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#instagram-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://twitter.com" aria-label="ссылка на Twitter">
+							<a class="footer-links" href="http://twitter.com" target="blank" aria-label="ссылка на Twitter">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#twitter-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://fb.com" aria-label="ссылка на Facebook">
+							<a class="footer-links" href="http://fb.com" target="blank" aria-label="ссылка на Facebook">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#facebook-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://linkedin.com" aria-label="ссылка на Linkedin">
+							<a class="footer-links" href="http://linkedin.com" target="blank" aria-label="ссылка на Linkedin">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#linkedin-icon"></use>
 								</svg>
