Задает разметку страницы "Портфолио"

--- a/portfolio.html
+++ b/portfolio.html
@@ -239,28 +239,28 @@
 					<b class="join-in">присоединяйтесь</b>
 					<ul class="list footer-links-list">
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://instagram.com" aria-label="ссылка на Instagram">
+							<a class="footer-links" href="http://instagram.com" target="blank" aria-label="ссылка на Instagram">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#instagram-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://twitter.com" aria-label="ссылка на Twitter">
+							<a class="footer-links" href="http://twitter.com" target="blank" aria-label="ссылка на Twitter">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#twitter-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://fb.com" aria-label="ссылка на Facebook">
+							<a class="footer-links" href="http://fb.com" target="blank" aria-label="ссылка на Facebook">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#facebook-icon"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-links-item">
-							<a class="footer-links" href="http://linkedin.com" aria-label="ссылка на Linkedin">
+							<a class="footer-links" href="http://linkedin.com" target="blank" aria-label="ссылка на Linkedin">
 								<svg class="socials-logo-icon" width="20" height="20">
 									<use href="./images/symbol-defs.svg#linkedin-icon"></use>
 								</svg>
