Создает разметку страницы "Портфолио"

--- a/portfolio.html
+++ b/portfolio.html
@@ -270,7 +270,12 @@
 				</div>
 				<div class="mail-subscribe">
 					<b class="subscribe">Подпишитесь на рассылку</b>
-					<button class="footer-button" type="button">Подписаться</button>
+					<button class="footer-button" type="button">
+						Подписаться
+						<svg class="footer-button-icon" width="24" height="24">
+							<use href="./images/symbol-defs.svg#icon-send"></use>
+						</svg>
+					</button>
 				</div>
 			</div>
 		</footer>
